--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 
     <head>
-        <title>Flyleaf Fanpage</title>
+        <title>Paramore Fan Page</title>
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
-        <h2>FLYLEAF</h2>
+        <h2>PARAMORE</h2>
     
     
     </body>
