--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <title>Paramore Fan Page</title>
         <link rel="stylesheet" href="main.css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     </head>
     <body>
         <ul>
@@ -19,8 +19,8 @@
         </div>
         
         <div class="imgOne">
-            <p>This is one of Paramore's
-            </p>
+            <p>These are some of Paramore's Albums.</p>
+            <img src="https://upload.wikimedia.org/wikipedia/en/d/dd/Paramore-all_we_know_is_falling.jpg"/><a>All We Know Is Falling(2005).</a>
         </div>
         
     </body>
