--- a/aboutme.html
+++ b/aboutme.html
@@ -11,9 +11,8 @@
         <div>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="page2.html">About Paramore</a></li>
-                <li><a href="#ReasonsWhyIt'sMyFavoriteBand">Reasons Why It's My Favorite Band</a></li>
-                <li style="float:right"><a class="active" href="#AboutMe">About Me</a></li>
+                <li><a href="paramore.html">About Paramore</a></li>
+                <li style="float:right"><a class="active" href="aboutme.html">About Me</a></li>
             </ul>
         </div>
         <header>
