--- a/index.html
+++ b/index.html
@@ -10,17 +10,20 @@
     <body>
         <div>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="page2.html">About Paramore</a></li>
-                <li><a href="#ReasonsWhyIt'sMyFavoriteBand">Reasons Why It's My Favorite Band</a></li>
-                <li style="float:right"><a class="active" href="#AboutMe">About Me</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="paramore.html">Paramore</a></li>
+                <li style="float:right"><a class="active" href="aboutme.html">About Me</a></li>
             </ul>
         </div>
-        <header>
-            <div class="banner">
-                <h1>PARAMORE</h1>
-            </div>
-        </header>
+        
+        <article>
+            <header>
+                <div class="banner">
+                    <h1>PARAMORE</h1>
+                </div>
+            </header>
+        </article>
+            
         <div class="container">
             <div class="row">
                 <span class="col-md-12"> 
