--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,7 @@
 
     <head>
         <title>Paramore Fan Page</title>
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="aboutme.css">
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Yatra+One" rel="stylesheet">
     </head>
@@ -15,11 +15,13 @@
                 <li style="float:right"><a class="active" href="aboutme.html">About Me</a></li>
             </ul>
         </div>
+        
         <header>
             <div class="banner">
                 <h1>PARAMORE</h1>
             </div>
         </header>
+        
         <div class="container">
             <div class="row">
                 <span class="col-md-12">
