--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,6 @@
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Yatra+One" rel="stylesheet">
     </head>
-
     <body>
         <div>
             <ul>
@@ -25,7 +24,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <p>Hello, my name is Magdalilia Velazquez, but my friends and family call me Lili. I have lived Indiana when I was young and now I live in Chicago. I like to read, draw, and sing. My favorite subject in school is math. And my favorite class that I'm taking right now is Mandarin. I mostly like all the food but my favorite is Pizza. When I become independent, I would like to travel and see new places.</p>
+                    <p>Hello, my name is Magdalilia Velazquez, but my friends and family call me <b>Lili</b>. I have lived <b>Indiana</b> when I was young and now I live in <b>Chicago</b>. I like to <b>read, draw, and sing</b>. My favorite subject in school is <b>math</b>. And my favorite class that I'm taking right now is <b>Mandarin</b>. I mostly like all the food but my favorite is <b>Pizza</b>. When I become independent, I would like to <b>travel</b> and see new places.</p>
                 </div>
             </div>
         </div>
