--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <body>
         <div>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="paramore.html">Paramore</a></li>
-                <li style="float:right"><a class="active" href="aboutme.html">About Me</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/pages/paramore.html">Paramore</a></li>
+                <li style="float:right"><a class="active" href="/pages/aboutme.html">About Me</a></li>
             </ul>
         </div>
         
