--- a/aboutme.html
+++ b/aboutme.html
@@ -3,16 +3,16 @@
 
     <head>
         <title>Paramore Fan Page</title>
-        <link rel="stylesheet" href="aboutme.css">
+        <link rel="stylesheet" href="/css/aboutme.css">
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Yatra+One" rel="stylesheet">
     </head>
     <body>
         <div>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="paramore.html">About Paramore</a></li>
-                <li style="float:right"><a class="active" href="aboutme.html">About Me</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/pages/paramore.html">Paramore</a></li>
+                <li style="float:right"><a class="active" href="/pages/aboutme.html">About Me</a></li>
             </ul>
         </div>
         <header>
@@ -24,7 +24,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <p>Hello, my name is Magdalilia Velazquez, but my friends and family call me <b>Lili</b>. I have lived <b>Indiana</b> when I was young and now I live in <b>Chicago</b>. I like to <b>read, draw, and sing</b>. My favorite subject in school is <b>math</b>. And my favorite class that I'm taking right now is <b>Mandarin</b>. I mostly like all the food but my favorite is <b>Pizza</b>. When I become independent, I would like to <b>travel</b> and see new places.</p>
+                    <p>Hello, my name is Magdalilia Velazquez, but my friends and family call me <b>Lili or Liliana</b>. I am 16 years old, and I am a Junior at ITW David Speer Academy. My favorite subject in school is <b>math</b>. And my favorite class that I'm taking right now is <b>Mandarin</b>. I have lived in <b>Indiana</b> when I was young and now I live in <b>Chicago</b>. I like to <b> sing and draw</b>. I mostly like all the food but my favorite is <b>Pizza</b>. When I become independent, I would like to <b>travel</b> and see new places</p>.
                 </div>
             </div>
         </div>
