--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 
     <head>
         <title>Paramore Fan Page</title>
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="/main.css">
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Yatra+One" rel="stylesheet">
+        <script type="text/javascript" src="/js/script.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     </head>
-    
     <body>
         <div>
             <ul>
-                <li><a href="/index.html">Home</a></li>
+                <li style="float:left"><a class="active" href="/index.html"><b>Home</b></a></li>
                 <li><a href="/pages/paramore.html">Paramore</a></li>
-                <li style="float:right"><a class="active" href="/pages/aboutme.html">About Me</a></li>
+                <li style="float:right"><a href="/pages/aboutme.html">About Me</a></li>
             </ul>
         </div>
         
